@@ -1,0 +1,3 @@
+prog: aes
+prereq: ../../../tests/x86_amd64_features amd64-sse42
+vgopts: -q
